--- a/views/project.ejs
+++ b/views/project.ejs
@@ -200,8 +200,8 @@
                     <p>&copy; 2024 HO YI AN JEROME. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
-                    <a href="https://github.com/yourusername" target="_blank" rel="noopener">GitHub</a>
-                    <a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener">LinkedIn</a>
+                    <a href="https://github.com/shi0hara" target="_blank" rel="noopener">GitHub</a>
+                    <a href="https://linkedin.com/in/jerome-ho-175302339/" target="_blank" rel="noopener">LinkedIn</a>
                 </div>
             </div>
         </div>
