--- a/views/index.ejs
+++ b/views/index.ejs
@@ -356,6 +356,19 @@
                         </div>
                     </div>
                 </div>
+                
+                <!-- Pagination Dots -->
+                <div class="carousel-pagination">
+                    <div class="pagination-dot active" data-slide="0"></div>
+                    <div class="pagination-dot" data-slide="1"></div>
+                    <div class="pagination-dot" data-slide="2"></div>
+                    <div class="pagination-dot" data-slide="3"></div>
+                    <div class="pagination-dot" data-slide="4"></div>
+                    <div class="pagination-dot" data-slide="5"></div>
+                    <div class="pagination-dot" data-slide="6"></div>
+                    <div class="pagination-dot" data-slide="7"></div>
+                    <div class="pagination-dot" data-slide="8"></div>
+                </div>
             </div>
             
             <div class="process margin-top">
