--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,9 @@
     <!-- Cursor Trail Canvas -->
     <canvas id="cursorCanvas"></canvas>
     <nav class="navbar">
-        <div class="logo">HO YI AN JEROME</div>
+        <a href="#" class="logo">
+            <img src="/images/logo.png" alt="HO YI AN JEROME" />
+        </a>
         <ul class="nav-links">
             <li><a href="#ueber-mich">About</a></li>
             <li><a href="#leistung">Services</a></li>
@@ -606,21 +608,21 @@
                     
                     <div class="contact-details">
                         <h4>Email Me</h4>
-                        <a href="mailto:hoyianjerome@email.com">hoyianjerome@email.com</a>
+                        <a href="mailto:hoyianjerome@gmail.com">hoyianjerome@gmail.com</a>
                         
                         <h4>Connect on Social</h4>
-                        <a href="#" target="_blank">github.com/hoyianjerome</a>
+                        <a href="#" target="_blank">github.com/shi0hara</a>
                     </div>
                     
                     <div class="availability">
                         <h5>Info</h5>
                         <p>Student · Open to opportunities</p>
                         <div class="socials">
-                            <a href="https://github.com/hoyianjerome" target="_blank" class="social-btn">
+                            <a href="https://github.com/shi0hara" target="_blank" class="social-btn">
                                 <i class="devicon-github-original"></i>
                                 <span>GitHub</span>
                             </a>
-                            <a href="https://linkedin.com/in/hoyianjerome" target="_blank" class="social-btn">
+                            <a href="https://www.linkedin.com/in/jerome-ho-175302339/" target="_blank" class="social-btn">
                                 <i class="devicon-linkedin-plain"></i>
                                 <span>LinkedIn</span>
                             </a>
