Fix logo path case sensitivity for Vercel (Logo.png)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,7 @@
     <canvas id="cursorCanvas"></canvas>
     <nav class="navbar">
         <a href="#" class="logo">
-            <img src="/images/logo.png" alt="HO YI AN JEROME" />
+            <img src="/images/Logo.png" alt="HO YI AN JEROME" />
         </a>
         <ul class="nav-links">
             <li><a href="#ueber-mich">About</a></li>
