--- a/views/project.ejs
+++ b/views/project.ejs
@@ -162,6 +162,62 @@
             </div>
         </section>
 
+        <!-- Video Section -->
+        <% if (project.video) { %>
+        <section class="project-video section">
+            <div class="container">
+                <h2>Project Video</h2>
+                <div class="video-wrapper">
+                    <% 
+                    // Handle different YouTube URL formats
+                    let videoUrl = project.video;
+                    if (videoUrl.includes('youtube.com/@') || videoUrl.includes('youtube.com/c/') || videoUrl.includes('youtube.com/channel/')) {
+                        // Channel link - provide a link instead of embed
+                        %>
+                        <div class="video-link-container">
+                            <a href="<%= videoUrl %>" target="_blank" rel="noopener" class="video-channel-link">
+                                <svg width="80" height="80" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                                </svg>
+                                <h3>Visit YouTube Channel</h3>
+                                <p>Click to watch project videos on YouTube</p>
+                            </a>
+                        </div>
+                    <% } else if (videoUrl.includes('youtube.com/watch?v=') || videoUrl.includes('youtu.be/')) {
+                        // Video link - extract video ID and embed
+                        let videoId = '';
+                        if (videoUrl.includes('youtube.com/watch?v=')) {
+                            videoId = videoUrl.split('v=')[1].split('&')[0];
+                        } else if (videoUrl.includes('youtu.be/')) {
+                            videoId = videoUrl.split('youtu.be/')[1].split('?')[0];
+                        }
+                        const embedUrl = `https://www.youtube.com/embed/${videoId}`;
+                        %>
+                        <iframe 
+                            width="100%" 
+                            height="500" 
+                            src="<%= embedUrl %>" 
+                            title="<%= project.title %> video" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen>
+                        </iframe>
+                    <% } else { %>
+                        <iframe 
+                            width="100%" 
+                            height="500" 
+                            src="<%= videoUrl %>" 
+                            title="<%= project.title %> video" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen>
+                        </iframe>
+                    <% } %>
+                </div>
+            </div>
+        </section>
+        <% } %>
+
         <!-- CTA Section -->
         <section class="project-cta section">
             <div class="container">
